--- a/.htaccess
+++ b/.htaccess
@@ -2,9 +2,10 @@ Options +FollowSymLinks
 RewriteEngine on
 RewriteBase /
 
+
 # force HTTPS
-RewriteCond %{SERVER_PORT} 80 
-RewriteRule ^(.*)$ https://www.lasvegasluxerealty.com/$1 [R,L]
+#RewriteCond %{SERVER_PORT} 80
+#RewriteRule ^(.*)$ https://www.lasvegasluxerealty.com/$1 [R,L]
 
 # Enable GZIP
 <ifmodule mod_deflate.c>
@@ -22,7 +23,7 @@ ExpiresActive On
 ExpiresByType image/jpg "access 1 week"
 ExpiresByType image/jpeg "access 1 week"
 ExpiresByType image/gif "access 1 week"
-	ExpiresByType image/png "access 1 week"
+ExpiresByType image/png "access 1 week"
 ExpiresByType text/css "access 1 month"
 ExpiresByType application/pdf "access 1 month"
 ExpiresByType text/x-javascript "access 1 month"
