--- a/.htaccess
+++ b/.htaccess
@@ -109,10 +109,10 @@ ExpiresDefault "access 1 week"
 # dynamic links here
 #
 
-RewriteRule ^new-homes                  search-result.php?type=homes
-RewriteRule ^new-condos                  search-result.php?type=condos
-RewriteRule ^new-townhouses                  search-result.php?type=townhouses
-RewriteRule ^new-highrise                  search-result.php?type=highrise
+RewriteRule ^new-homes                  search-result.php?type=homes&filter=1
+RewriteRule ^new-condos                  search-result.php?type=condos&filter=1
+RewriteRule ^new-townhouses                  search-result.php?type=townhouses&filter=1
+RewriteRule ^new-highrise                  search-result.php?type=highrise&filter=1
 
 RewriteRule ^mail/contact-landing                  contact-me.php?type=contact
 
